--- a/src/components/icon.html
+++ b/src/components/icon.html
@@ -73,9 +73,15 @@
 						</li>
 						<li>
 							<span class="icon">
+								<i class="ico icon-tip-navy040 md"></i>
+							</span>
+							<span class="text">tip-navy040</span>
+						</li>
+						<li>
+							<span class="icon">
 								<i class="ico icon-tip-green060 md"></i>
 							</span>
-							<span class="text">tip</span>
+							<span class="text">tip-green060</span>
 						</li>
 						<li>
 							<span class="icon" style="background-color:#000"><i class="ico plus-round lg"></i></span>
