--- a/src/include/bot_fix.html
+++ b/src/include/bot_fix.html
@@ -3,7 +3,7 @@
 					<div class="btn-wrap">
 						<!-- column 클레스 적용하면 col 스타일 적용 -->
 						<div class="btn-group">
-							<button type="button" class="btn xl" @@disabled>@@title</button>
+							<button type="button" class="btn lg" @@disabled>@@title</button>
 						</div>
 					</div>
 				</div>
