--- a/src/scss/_libs/_status01.scss
+++ b/src/scss/_libs/_status01.scss
@@ -6,8 +6,28 @@
 	.status-guide{
 		margin:0 -20px;
 	}
+	.title-area{
+		margin-top:24px;
+		.flex:last-child{
+			text-align:right;
+			align-items:center;
+		}
+		.btn-more{
+			display:inline-flex;
+			align-items:center;
+			height:24px;
+			@include fontSize(12);
+			color:$navy-040;
+		}
+		.under{
+			text-decoration:underline;
+		}
+		.ico{
+			margin-right:4px;
+		}
+	}
 	.status-step{
-		margin-top:32px;
+		margin-top:16px;
 		.flex{
 			position:relative;
 			text-align:center;
@@ -77,19 +97,16 @@
 				height:100px;
 			}
 			.car{
-				font-size:$font-md;
-				font-weight:500;
-				line-height:24px;
+				@include fontSize(16,500);
 			}
 			.number{
 				margin-top:4px;
-				font-size:$font-md;
-				line-height:24px;
+				@include fontSize(16);
 			}
 			.subway{
 				height:20px;
 				margin-top:4px;
-				font-size:$font-sm2;
+				@include fontSize(14);
 				.badge-g{
 					width:20px;
 					height:20px;
@@ -99,9 +116,8 @@
 			}
 			.date,.receipt{
 				margin-top:4px;
-				font-size:$font-sm;
+				@include fontSize(12);
 				color:$navy-040;
-				line-height:16px;
 				&:not(.receipt){
 					margin-top:10px;
 				}
@@ -127,11 +143,10 @@
 		}
 		.flex{
 			&:first-child{
-				font-size:$font-md;
-				font-weight:500;
+				@include fontSize(16,500);
 			}
 			&:last-child{
-				font-size:$font-sm2;
+				@include fontSize(14);
 				text-align:right;
 			}
 		}
@@ -140,13 +155,11 @@
 	.notice-txt{
 		margin-top:24px;
 		.tit{
-			font-size:$font-sm2;
-			font-weight:500;
+			@include fontSize(14,500);
 		}
 		li{
 			padding-left:14px;
-			font-size:$font-sm;
-			line-height:20px;
+			@include fontSize(12);
 			&::before{
 				left:5px;
 				width:2px;
@@ -197,7 +210,7 @@
 					top:-25px;
 					left:-2px;
 					min-width:55px;
-					font-size:$font-sm;
+					@include fontSize(12);
 					color:$navy-040;
 				}
 				&.point02{
@@ -264,7 +277,7 @@
 		.grid-flex{
 			padding:6px 0;
 			.flex{
-				font-size:$font-sm2;
+				@include fontSize(14);
 				&:last-child{
 					text-align:right;
 				}
@@ -284,8 +297,7 @@
 			.grid-flex{
 				padding:19px 0;
 				.flex{
-					font-size:$font-md;
-					font-weight:500;
+					@include fontSize(16,500);
 					&:last-child{
 						color:$default;
 					}
@@ -327,15 +339,14 @@
 		&.corp{
 			.flex{
 				&:last-child{
-					font-size:$font-md;
+					@include fontSize(16);
 					color:$navy-020;
 				}
 			}
 			.desc-cp{
 				margin-top:9px;
-				font-size:$font-sm;
+				@include fontSize(12);
 				color:$navy-040;
-				line-height:24px;
 			}
 		}
 		.btn-group{
@@ -347,7 +358,7 @@
 			margin-top:20px;
 			padding-top:24px;
 			span{
-				font-size:$font-xl;
+				@include fontSize(20);
 			}
 		}
 	}
@@ -401,8 +412,7 @@
 		.flex{
 			.btn-link{
 				height:auto;
-				line-height:1.1;
-				font-size:$font-md;
+				@include fontSize(16);
 			}
 		}
 	}
@@ -421,8 +431,7 @@
 					li{
 						margin-top:0;
 						padding-left:8px;
-						font-size:$font-sm;
-						line-height:16px;
+						@include fontSize(12);
 						color:$navy-070;
 						&::before{
 							top:8px;
@@ -458,8 +467,7 @@
 			}
 			.desc-xs{
 				margin-top:8px;
-				font-size:$font-sm;
-				line-height:16px;
+				@include fontSize(12);
 				color:$navy-040;
 				&:first-child{
 					margin-top:0;
