--- a/src/scss/_tab.scss
+++ b/src/scss/_tab.scss
@@ -70,8 +70,7 @@
 					height: 65px;
 					vertical-align: middle;
 					color:$navy-040;
-					font-size: $font-md;
-					font-weight: 500;
+					@include fontSize(16,500);
 					text-align:center;
 	
 					&.active {
@@ -118,9 +117,8 @@
 					justify-content: center;
 					align-items: center;
 					height:44px;
-					font-size:$font-md;
+					@include fontSize(16,500);
 					color:$navy-040;
-					font-weight:500;
 					vertical-align: middle;
 					background-color:$navy-020;
 
