--- a/src/scss/_input.scss
+++ b/src/scss/_input.scss
@@ -152,7 +152,7 @@ input[type="email"] {
 		width:100%;
 		height:48px;
 		padding:0;
-		font-weight:500;
+		@include fontSize(18,500);
 		background:transparent;
 		outline:none;
 	}
