아이콘 업데이트

--- a/src/scss/_icon.scss
+++ b/src/scss/_icon.scss
@@ -70,7 +70,6 @@ $icon-size: (
         "info-dark": "icon_alert_circle_dark.svg",
         "file-export": "icon_file_export.svg",
         "text-delete": "icon_text_del.svg",
-        "more": "icon_more.svg",
         "share": "icon_share.svg",
         "dots-v": "icon_dots_v.svg",
         "message": "icon_message.svg",
@@ -87,6 +86,9 @@ $icon-size: (
         "round-trip": "icon_round_trip.svg",
         "one-way": "icon_oneway.svg",
         "register": "icon_register.svg",
+        "arrow-next": "icon_arrow_next.svg",
+        "arrow-down": "icon_arrow_down.svg",
+        "arrow-up-down": "icon_arrows_up_down.svg",
     )
     
 ) !default;
