--- a/src/scss/_mixin.scss
+++ b/src/scss/_mixin.scss
@@ -328,19 +328,5 @@
 	@if not($weight == null or $weight =='') {
 		font-weight:$weight;
 	}
-	@if($size == 10){
-		line-height:12px;
-	} @else if($size == 12){
-		line-height:16px;
-	} @else if($size == 14){
-		line-height:20px;
-	} @else if($size == 16){
-		line-height:24px;
-	} @else if($size == 18){
-		line-height:24px;
-	} @else if($size == 20){
-		line-height:28px;
-	}
+	line-height:map-get($lineHeight, #{$size}, "line-height");
 }
-
-
