사고접수현황 수정

--- a/src/components/etc.html
+++ b/src/components/etc.html
@@ -90,21 +90,21 @@
 									<!-- 여백은 layer-cont or 하위 dom 적용 -->
 									<div class="layer-cont">
 										<div class="agree-cont">
-											<p class="title-xs">
+											<p class="title-xxs">
 												이용목적
 											</p>
 											<p class="desc-sm">
 												장애 신고 접수 및 조치를 위한 개인정보 수집
 											</p>
 	
-											<p class="title-xs">
+											<p class="title-xxs">
 												수집항목
 											</p>
 											<p class="desc-sm">
 												이름, 휴대폰번호 , 신고 사유
 											</p>
 	
-											<p class="title-xs">
+											<p class="title-xxs">
 												보유기간
 											</p>
 											<p class="desc-sm">
