--- a/src/scss/_libs/_status01.scss
+++ b/src/scss/_libs/_status01.scss
@@ -3,9 +3,6 @@
 .status{
 	padding-bottom:80px;
 	//사고접수안내
-	.status-guide{
-		margin:0 -20px;
-	}
 	.title-area{
 		margin-top:24px;
 		.flex:last-child{
@@ -27,7 +24,7 @@
 		}
 	}
 	.status-step{
-		margin-top:16px;
+		margin:16px 0 24px;
 		.flex{
 			position:relative;
 			text-align:center;
@@ -58,7 +55,12 @@
 			}
 		}
 	}
-	.status-guide,.btn-wrap{
+	.status-guide{
+		margin-top:16px;
+		padding-bottom:24px;
+		@include border('b');
+	}
+	.btn-wrap{
 		margin-top:32px;
 	}
 
@@ -66,7 +68,7 @@
 	.accident-status{
 		& > .module{
 			padding-bottom:27px;
-			border-top:1px solid $navy-020;
+			@include border('t');
 			&:first-child{
 				margin-top:0;
 				border-top:0;
@@ -161,9 +163,8 @@
 			padding-left:14px;
 			@include fontSize(12);
 			&::before{
+				top:6px;
 				left:5px;
-				width:2px;
-				height:2px;
 			}
 			&:first-child{
 				margin-top:8px;
@@ -257,7 +258,7 @@
 			&::before{
 				display:inline-block;
 				position:absolute;
-				top:-2px;
+				top:-1px;
 				left:0px;
 				width:24px;
 				height:4px;
