--- a/src/scss/_mypage.scss
+++ b/src/scss/_mypage.scss
@@ -598,7 +598,7 @@
         margin-bottom: -2px;
         @include flex-center;
         .left {
-            .title-xs {
+            .title-xxs {
                 span {
                     margin-left: 4px;
                     color: $navy-040;
