--- a/src/scss/_customer.scss
+++ b/src/scss/_customer.scss
@@ -235,15 +235,13 @@
         border-radius: $border-radius;
         text-align: center;
         .img {
-            img {
-                width: 56px;
-                height: 56px;
-            }
+            height: 56px;
         }
         .text {
             margin-top: 8px;
             color: $navy-070;
             @include fontSize(14, 500);
+            line-height: 18px;
         }
     }
     &:last-child {
@@ -294,7 +292,7 @@
     height: 60px;
     position: fixed;
     right: 20px;
-    bottom: 140px;
+    bottom: 132px;
     border-radius: 50%;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2);
     background-color: $gray-000;
@@ -314,7 +312,6 @@
     textarea {
         width: 100%;
         border: 1px solid $navy-020;
-        border-radius: $border-radius;
         padding: 8px;
         &::placeholder {
             color: $navy-040;
@@ -389,6 +386,7 @@
         td {
             text-align: center;
             vertical-align: middle;
+            font-weight: normal;
         }
         tr {
             td {
@@ -414,6 +412,7 @@
         td {
             text-align: center;
             vertical-align: middle;
+            font-weight: normal;
         }
         tbody {
             td {
@@ -428,12 +427,19 @@
     }
 }
 
-// 라디오 셀렉트 리스트
-.radio-select-list {
+// 셀렉트 리스트
+.select-list {
+    margin-top: -24px;
     li {
         padding: 16px 0;
-        input[type="radio"] + span {
+        span {
+            color: $navy-070;
             @include fontSize(18, 400);
+        }
+        &.active {
+            span {
+                color: $green-060;
+            }
         }
     }
 }
@@ -741,5 +747,47 @@
             margin-top: 16px;
             @include fontSize(20, 500);
         }
+    }
+}
+
+.filter-box {
+    height: 72px;
+    @include flex-center;
+    > div {
+        @include flex-center;
+    }
+    .btn.icon {
+        .text {
+            color: $navy-070;
+            @include fontSize(18, 500);
+        }
+    }
+}
+
+.no-data {
+    margin-top: 16px;
+    &.text-type {
+        padding: 0;
+        p {
+            text-align: left;
+            color: $navy-040;
+            @include fontSize(14);
+        }
+        &:before {
+            display: none;
+        }
+    }
+}
+
+.chat-area{
+    margin-top: 315px;
+    p{
+        color: $navy-040;
+        @include fontSize(14);
+    }
+    p + .btn{
+        width: 120px;
+        margin: 0 auto ;
+        margin-top: 16px;
     }
 }
