고객센터 -- 작업 중

--- a/src/scss/_customer.scss
+++ b/src/scss/_customer.scss
@@ -791,3 +791,14 @@
         margin-top: 16px;
     }
 }
+
+.btn-area{
+    &.center{
+        .btn{
+            margin: 0 auto;
+            .text{
+                color: $navy-070;
+            }
+        }
+    }
+}
