고객센터 -- 작업 중

--- a/src/scss/_customer.scss
+++ b/src/scss/_customer.scss
@@ -802,3 +802,13 @@
         }
     }
 }
+.desc-gray{
+    color: $navy-040;
+    @include fontSize(14);
+}
+
+.agree-terms{
+    strong{
+        @include fontSize(16,500)
+    }
+}
