--- a/src/scss/_customer.scss
+++ b/src/scss/_customer.scss
@@ -732,23 +732,7 @@
     }
 }
 
-.no-data {
-    &.list {
-        &:before {
-            content: " ";
-            display: block;
-            width: 72px;
-            height: 72px;
-            margin: 0 auto;
-            background-image: url(#{$url-ico}icon_mark.svg);
-            background-size: cover;
-        }
-        > p {
-            margin-top: 16px;
-            @include fontSize(20, 500);
-        }
-    }
-}
+
 
 .filter-box {
     height: 72px;
@@ -775,6 +759,23 @@
         }
         &:before {
             display: none;
+        }
+    }
+    &.list {
+        padding-top: 36px;
+        &:before {
+            content: " ";
+            display: block;
+            width: 72px;
+            height: 72px;
+            margin: 0 auto;
+            background-image: url(#{$url-ico}icon_mark.svg);
+            background-size: cover;
+        }
+        > p {
+            margin-top: 16px;
+            color: $navy-070;
+            @include fontSize(20, 500);
         }
     }
 }
